end of section 7

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "cuid": "^3.0.0",
+    "date-fns": "^2.14.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.18.0",
