--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "date-fns": "^2.14.0",
     "formik": "^2.4.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
+    "redux-thunk": "^3.1.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "yup": "^1.2.0"
